# HTMLCompare

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: errors.py  list_of_projects.xlsx  list_of_projects2.xlsx  main.py  pyproject.toml
