[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Sergei Krivashkin <itimeq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
html5lib = "^1.1"
selenium = "^4.10.0"
selenium-wire = "^5.1.0"
pathlib = "^1.0.1"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
